--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
+    "noEmit": true,
     "baseUrl": "."
   },
   "exclude": ["node_modules"],
