--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mullvad",
   "version": "0.0.1",
   "description": "A utility library for interacting with the Mullvad VPN API",
+  "private": false,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
