--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mullvad",
+  "name": "@spikenilan/mullvad",
   "version": "0.0.2",
   "description": "A utility library for interacting with the Mullvad VPN API",
   "private": false,
@@ -16,7 +16,7 @@
   },
   "keywords": [],
   "author": "Spike Nilan",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@types/node": "^18.14.6",
